// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Anchor /> should render href props 1`] = `
<Anchor
  color="#fff"
  href="https://github.com/RyanCCollins/scalable-react-ts-boilerplate"
  label="Scalable React"
  method="push"
/>
`;

exports[`<Anchor /> should render path props 1`] = `
<Anchor
  color="#fff"
  label="Docs"
  method="push"
  path="/docs"
/>
`;

exports[`<Anchor /> should render with children 1`] = `
<Anchor
  method="push"
  path="/about"
>
  About 👶
</Anchor>
`;

exports[`<Anchor /> should render with default props 1`] = `
<Anchor
  method="push"
/>
`;
